# prima

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  Cargo.toml  Dockerfile  README.md  components.json  config.yml  dev.sh  docker-compose.yml  eslint.config.js  generate_entities.sh  geojson.sql  input.css  kysely.config.ts  motis-import.sh  osrm.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  preview.sh  query.sql  refresh-docker.sh  ride-sharing-bounds.geojson  setup-db.sh  simulation-stats.jsonl  svelte.config.js  tailwind.config.js  tailwind.config.ts  tailwind.sh  vite.config.ts  weisswasser.geojson
booking-generator/: README.md  Weisswasser.txt  filter.json  filter.py  filters.json  generator.conf  readme.md  readme.txt  request_gen.py  single_request.json  stops.txt  stops_test.txt  test_addr
cron/: Dockerfile  cron-loader.js  crontab
data/: availability.sql  company.sql  event.sql  expandWeißwasser.sql  request.sql  rideShareVehicle.sql  rideShareZone.sql  taxiFilter.sql  tour.sql  user.sql  vehicle.sql  zone.sql
db_backups/: full_backup_2025_04_30_07_18_52_475_.sql
driver-app/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts  test-setup.md
e2e/: availability.test.ts  booking.test.ts  companyData.test.ts  config.ts  db.setup.ts  driver.test.ts  login.setup.test.ts  moveTour.test.ts  rideShare.test.ts  taxiOwnerAssignsRoles.test.ts  testData.ts  utils.ts
eslint-rules/: require-uuid-undefined.js
fuzz/: Cargo.toml
html/: base.html  base2.html  base3.html  home.html  (+6 more)
(+1102 files in other folders)
