[package]
name = "prima"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.7"
itertools = "0.12.1"
notify = "6.1.1"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["full"] }
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = "0.12.12"
cf-turnstile = { default-features = false, features = ["rustls-native-roots"], version = "0.1" }
tower-livereload = "0.9.1"
dotenv = "0.15.0"
migration = { path = "migration" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
reqwest = "0.11.24"
sea-orm-cli = "0.12.14"
chrono = "0.4.10"
geo = "0.28.0"
geojson = "0.24.1"
readonly = "=0.2.8"